--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ summary {
 
 
 <h1 class="title toc-ignore">BDS516 Homework #9</h1>
-<h4 class="author">Sophie Bass</h4>
+<h4 class="author">Quinn Rhodes</h4>
 <h4 class="date">4/21/2021</h4>
 
 </div>
